--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Guild tracker for Lords Mobile",
   "main": "server.js",
-"scripts": {
-  "start": "node server.js",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "node server.js",
+    "client": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
@@ -18,6 +20,7 @@
     "lucide-react": "^0.525.0",
     "multer": "^2.0.2",
     "papaparse": "^5.5.3",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.1.11",
     "xlsx": "^0.18.5"
   },
